ajout image illustration et variable style dans app css

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,31 @@
+@font-face {
+  font-family: "Nunito-Bold";
+  src: url("./assets/fonts/Nunito-Bold.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Nunito-Regular";
+  src: url("./assets/fonts/Nunito-Regular.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Nunito-SemiBold";
+  src: url("./assets/fonts/Nunito-SemiBold.ttf") format("truetype");
+}
+
+:root {
+  --font-text : "Nunito-Regular", sans-serif;
+  --font-bold : "Nunito-Bold", sans-serif;
+  --font-semibold : "Nunito-SemiBold", sans-serif;
+  --jaune : #FFEEB6;
+  --violet : #6A5AE0;
+  --rose : #FFD6DD;
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
 }
+
