--- a/src/pages/Quizz.css
+++ b/src/pages/Quizz.css
@@ -11,7 +11,7 @@
   width: 80%;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  /* gap: 20px; */
   margin: auto;
  
 }
@@ -20,6 +20,8 @@
  padding: 16px;
  height: fit-content;
 }
+
+
 
 .btn-next{
   padding-top: 32px;
