--- a/src/App.css
+++ b/src/App.css
@@ -30,12 +30,13 @@
 
 #root {
   text-align: center;
- background-color: blueviolet;
+  font-family: var(--font-text);
 }
 
 .question-container {
   border: 2px solid black;
-  background-color: azure;
+  border-radius: 30px 30px 30px 30px;
+  background-color: white;
   width: 70%;
   margin: auto;
   height: fit-content;
@@ -43,10 +44,24 @@
   flex-direction: column;
   align-content: center;
   justify-content: center;
-  border-radius: 8px;
-   padding: 16px 0px 16px 0px;
+  padding: 0px 0px 16px 0px;
 }
 
 .question-container > h1{
+  padding: 16px;
+  background-color: var(--jaune);
+  border-radius: 30px 30px 0px 0px;
+  font-family: var(--font-semibold);
+}
+
+
+.suivant {
+  font-family: var(--font-bold);
+  color: var(--violet);
+  font-size: 18px;
+  background-color: var(--jaune);
+  border: 2px solid black;
+  border-radius: 40px 40px 40px 40px;
+  width: 100%;
   padding: 16px;
 }
