--- a/src/pages/Homepage.css
+++ b/src/pages/Homepage.css
@@ -1,3 +1,6 @@
+.FLYHP {
+    padding-top: 3rem;
+}
 .containerButton {
     padding-top: 6rem;
 }
@@ -13,3 +16,4 @@
     border-radius: 20px 20px 20px 20px;
     border: 2px solid black;
 }
+
