--- a/src/App.css
+++ b/src/App.css
@@ -33,37 +33,38 @@
   font-family: var(--font-text);
 }
 
-.question-container {
+.main-question-container {
   border: 2px solid black;
   border-radius: 30px 30px 30px 30px;
   background-color: white;
   width: 70%;
   margin: auto;
+  margin-bottom: 2rem;
+  margin-top:3rem;
   height: fit-content;
   display: flex;
   flex-direction: column;
   align-content: center;
   justify-content: center;
-  border-radius: 8px;
-   padding: 16px 0px 16px 0px;
-   gap: 20px;
+  padding: 0px 0px 16px 0px;
+  gap: 20px;
 }
 
-.question-container > h1{
+.context-container > .text-context {
   padding: 16px;
   background-color: var(--jaune);
   border-radius: 30px 30px 0px 0px;
   font-family: var(--font-semibold);
+  font-size: 20px;
 }
 
 
-.suivant {
+/* .nextBouton {
   font-family: var(--font-bold);
   color: var(--violet);
   font-size: 18px;
-  background-color: var(--jaune);
   border: 2px solid black;
   border-radius: 40px 40px 40px 40px;
   width: 100%;
   padding: 16px;
-}
+} */
