--- a/src/components/Explication.css
+++ b/src/components/Explication.css
@@ -1,30 +1,35 @@
-.explication-container{
+.main-explication-container{
 background-color: white;
 border: 1px solid black;
-  height: fit-content;
-  width: 80%;
-  margin: auto;
-    margin-top: auto;
-    margin-bottom: auto;
+height: fit-content;
+width: 60%;
+margin: auto;
+  margin-top: auto;
+  margin-bottom: auto;
   margin-top: 35px;
   margin-bottom: 35px;
-  border-radius: 8px;
-  padding: 16px 0 16px 0px;
+border-radius: 8px;
+padding: 16px 0 16px 0px;
 
 
-   opacity: 0;
-  height: 0;
-  overflow: hidden;
-  transition: opacity 2s, height 2s;
+opacity: 0;
+height: 0;
+overflow: hidden;
+transition: opacity 2s, height 2s;
 }
 
-.explication-container.show {
+.main-explication-container.show {
   opacity: 1;
   height: auto;
 }
 
 .explication-image{
   width: 25%;
+}
+
+.btn-next{
+  padding-top: 32px;
+  height: fit-content;
 }
 
 /* @keyframes fadeIn {
