--- a/src/App.css
+++ b/src/App.css
@@ -14,12 +14,12 @@
 }
 
 :root {
-  --font-text : "Nunito-Regular", sans-serif;
-  --font-bold : "Nunito-Bold", sans-serif;
-  --font-semibold : "Nunito-SemiBold", sans-serif;
-  --jaune : #FFEEB6;
-  --violet : #6A5AE0;
-  --rose : #FFD6DD;
+  --font-text: "Nunito-Regular", sans-serif;
+  --font-bold: "Nunito-Bold", sans-serif;
+  --font-semibold: "Nunito-SemiBold", sans-serif;
+  --jaune: #ffeeb6;
+  --violet: #6a5ae0;
+  --rose: #ffd6dd;
 }
 
 * {
@@ -37,10 +37,10 @@
   border: 2px solid black;
   border-radius: 30px 30px 30px 30px;
   background-color: white;
-  width: 70%;
+  width: 80%;
   margin: auto;
   margin-bottom: 2rem;
-  margin-top:3rem;
+  margin-top: 3rem;
   height: fit-content;
   display: flex;
   flex-direction: column;
@@ -48,6 +48,7 @@
   justify-content: center;
   padding: 0px 0px 16px 0px;
   gap: 20px;
+  min-height: 200px;
 }
 
 .context-container > .text-context {
@@ -57,8 +58,11 @@
   font-family: var(--font-semibold);
   font-size: 20px;
 }
-
-
+.context-container {
+  border-bottom: 2px solid black;
+  border-top: 2px solid black;
+  border-radius: 30px 30px 0px 0px;
+}
 /* .nextBouton {
   font-family: var(--font-bold);
   color: var(--violet);
