--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@
   --font-bold: "Nunito-Bold", sans-serif;
   --font-semibold: "Nunito-SemiBold", sans-serif;
   --jaune: #ffeeb6;
+  --orange: #FCBB65;
   --violet: #6a5ae0;
   --rose: #ffd6dd;
 }
