--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,17 @@
   border-top: 2px solid black;
   border-radius: 30px 30px 0px 0px;
 }
+
+
+.container-restart {
+  margin: 2rem;
+}
+
+.FLY-result {
+  padding-top:2rem;
+  padding-bottom:4rem;
+}
+
 /* .nextBouton {
   font-family: var(--font-bold);
   color: var(--violet);
