--- a/src/components/Explication.css
+++ b/src/components/Explication.css
@@ -7,7 +7,7 @@
   margin-top: 20px;
   margin-bottom: 20px;
   border-radius: 8px;
-  padding: 16px 0 16px 0px;
+  padding: 20px;
 
   opacity: 0;
   height: 0;
